@@ -5,3 +5,4 @@ require 'active_support/core_ext/array/conversions'
 require 'active_support/core_ext/array/extract_options'
 require 'active_support/core_ext/array/grouping'
 require 'active_support/core_ext/array/random_access'
+require 'active_support/core_ext/array/prepend_and_append'
