@@ -465,3 +465,13 @@ class ArrayWrapperTests < Test::Unit::TestCase
     assert_equal DoubtfulToAry.new.to_ary, Array.wrap(DoubtfulToAry.new)
   end
 end
+
+class ArrayPrependAppendTest < Test::Unit::TestCase
+  def test_append
+    assert_equal [1, 2], [1].append(2)
+  end
+  
+  def test_prepend
+    assert_equal [2, 1], [1].prepend(2)
+  end
+end
